load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

bzl_library(
    name = "with_cfg",
    srcs = ["with_cfg.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//with_cfg:defs"],
)
