load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

# For stardoc to reference the files
exports_files(
    ["with_cfg.bzl"],
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "with_cfg",
    srcs = ["with_cfg.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//with_cfg:defs"],
)

bool_flag(
    name = "incompatible_same_depth_path_layout",
    build_setting_default = True,
    visibility = ["//visibility:public"],
)
