module(
    name = "fmeum_with_cfg",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.1")

bazel_dep(name = "aspect_bazel_lib", version = "1.32.1", dev_dependency = True)
single_version_override(
    module_name = "aspect_bazel_lib",
    patch_strip = 1,
    patches = [
        # https://github.com/aspect-build/bazel-lib/pull/494
        "//:aspect_bazel_lib-fix-stardoc.patch",
    ],
)

bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "buildifier_prebuilt", version = "6.1.0", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.29.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "platforms", version = "0.0.6", dev_dependency = True)
bazel_dep(name = "rules_testing", version = "0.4.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.6.1", dev_dependency = True)
