module(name = "with_cfg_examples")

bazel_dep(name = "with_cfg.bzl", version = "")
local_path_override(
    module_name = "with_cfg.bzl",
    path = "..",
)

bazel_dep(name = "bazel_features", version = "1.37.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "contrib_rules_jvm", version = "0.30.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_jvm_external", version = "6.9")
bazel_dep(name = "rules_shell", version = "0.6.1")

# Not a direct dep, update to fix compatibility with --incompatible_autoload_externally=.
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

register_toolchains(
    "//:toolchain_jdk_17_definition",
    "//:toolchain_jdk_21_definition",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven_java_test_suite_example",
    artifacts = [
        "org.junit.jupiter:junit-jupiter-api:5.10.2",
        "org.junit.jupiter:junit-jupiter-engine:5.10.2",
        "org.junit.platform:junit-platform-launcher:1.10.2",
        "org.junit.platform:junit-platform-reporting:1.10.2",
    ],
)
use_repo(maven, "maven_java_test_suite_example")

# Needed because JavaBuilder at HEAD now requires at least JDK 21, but we test with JDK 17.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "legacy_remote_java_tools",
    url = "https://github.com/bazelbuild/java_tools/releases/download/java_v17.0/java_tools-v17.0.zip",
    sha256 = "9a441ca2d4ae393edd305b0e465b0ed8ee86b22123c41c26455fb856bf9bc897",
)

# Deps only required by legacy_remote_java_tools.
bazel_dep(name = "protobuf", version = "33.4", repo_name = "com_google_protobuf")
