load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# Legacy export, no longer used by this module.
exports_files(["defs.bzl"])

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//with_cfg/private:original_settings",
        "//with_cfg/private:with_cfg",
    ],
)
