load("//args_location_expansion/rules:defs.bzl", "write_settings_rule")
load(":doubly_transitioned_test.bzl", "doubly_transitioned_test")

write_settings_rule(
    name = "single_rule",
)

doubly_transitioned_test(
    name = "doubly_transitioned_test",
    args = [
        "$(rlocationpath :single_rule)",
        "$(rlocationpaths //args_location_expansion/pkg:all_rules)",
    ],
    binary = ":test_bin",
    data = [
        ":single_rule",
        "//args_location_expansion/pkg:all_rules",
    ],
)

sh_binary(
    name = "test_bin",
    srcs = ["test_bin.sh"],
    data = ["@bazel_tools//tools/bash/runfiles"],
    visibility = ["//visibility:public"],
)
