load("@rules_java//java:java_binary.bzl", "java_binary")
load("@rules_java//java:java_library.bzl", "java_library")
load("@with_cfg.bzl", "original_settings")
load(":java_21_library.bzl", "java_21_binary", "java_21_library", "java_21_library_reset", "java_21_test")

java_21_binary(
    name = "Main",
    srcs = ["src/main/java/com/example/Main.java"],
    main_class = "com.example.Main",
    deps = [":primes"],
)

java_21_library(
    name = "primes",
    srcs = ["src/main/java/com/example/Primes.java"],
    # Only used to verify that with_cfg.bzl supports the toolchains attribute on
    # non-executable rules. Ignore for the purposes of this example.
    toolchains = [
        "@rules_java//toolchains:current_java_runtime",
    ],
    deps = [":integer_type"],
)

java_21_library(
    name = "integer_type",
    srcs = ["src/main/java/com/example/IntegerType.java"],
)

java_21_test(
    name = "primes_tests",
    srcs = [
        "src/test/java/com/example/PrimesTest.java",
    ],
    test_class = "com.example.PrimesTest",
    deps = [
        ":primes",
    ],
)

java_21_test(
    name = "main_tests",
    srcs = [
        "src/test/java/com/example/MainTest.java",
    ],
    test_class = "com.example.MainTest",
    deps = [
        ":Main",
    ],
)

original_settings(
    name = "java_21_binary_original_settings",
)

original_settings(
    name = "java_21_library_original_settings",
)

original_settings(
    name = "java_21_test_original_settings",
)

original_settings(
    name = "java_21_junit5_test_original_settings",
)
