load(":java_17_junit5_test.bzl", "java_17_junit5_test")
load(":java_21_junit5_test.bzl", "java_21_junit5_test")
load(":test_suite.bzl", "multi_jdk_test_suite")

multi_jdk_test_suite(
    name = "test-suite",
    srcs = ["src/test/java/com/example/VersionTest.java"],
    test_runners = {
        "jdk21": java_21_junit5_test,
        "jdk17": java_17_junit5_test,
    },
    deps = [
        "@maven_java_test_suite_example//:org_junit_jupiter_junit_jupiter_api",
        "@maven_java_test_suite_example//:org_junit_jupiter_junit_jupiter_engine",
        "@maven_java_test_suite_example//:org_junit_platform_junit_platform_launcher",
        "@maven_java_test_suite_example//:org_junit_platform_junit_platform_reporting",
    ],
)
