load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "builder",
    srcs = ["builder.bzl"],
    visibility = ["//with_cfg:__subpackages__"],
    deps = [
        ":frontend",
        ":setting",
        ":transition",
        ":transitioning_alias",
        ":wrapper",
    ],
)

bzl_library(
    name = "common",
    srcs = ["common.bzl"],
    visibility = ["//with_cfg:__subpackages__"],
)

bzl_library(
    name = "frontend",
    srcs = ["frontend.bzl"],
    visibility = ["//with_cfg:__subpackages__"],
    deps = [":common"],
)

bzl_library(
    name = "rule_defaults",
    srcs = ["rule_defaults.bzl"],
    visibility = ["//with_cfg:__subpackages__"],
)

bzl_library(
    name = "setting",
    srcs = ["setting.bzl"],
    visibility = ["//with_cfg:__subpackages__"],
    deps = [":utils"],
)

bzl_library(
    name = "transition",
    srcs = ["transition.bzl"],
    visibility = ["//with_cfg:__subpackages__"],
    deps = [
        ":setting",
        ":utils",
    ],
)

bzl_library(
    name = "transitioning_alias",
    srcs = ["transitioning_alias.bzl"],
    visibility = ["//with_cfg:__subpackages__"],
    deps = [
        ":common",
        ":setting",
    ],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    visibility = ["//with_cfg:__subpackages__"],
)

bzl_library(
    name = "with_cfg",
    srcs = ["with_cfg.bzl"],
    visibility = ["//with_cfg:__subpackages__"],
    deps = [
        ":builder",
        ":common",
        ":rule_defaults",
    ],
)

bzl_library(
    name = "wrapper",
    srcs = ["wrapper.bzl"],
    visibility = ["//with_cfg:__subpackages__"],
    deps = [":setting"],
)
